<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CRM小助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_input_plansrattime">请设置开始计划时间</string>
    <string name="please_input_contact">请设置联系人</string>
    <string name="please_input_workplan">请设置工作计划</string>
    <string name="please_input_talk">请设置谈话内容</string>
    <string name="please_input_summary">请设置总结</string>
    <string name="load_gps_success">定位成功</string>
    <string name="load_gps_fail">定位失败</string>
    <string name="settime_err">结束时间不能在开始时间前</string>
    <string name="endtime_err">结束时间不能在计划开始时间前</string>
    <string name="settime_before">请先设置开始时间</string>
    <string name="login_username">用户名</string>
    <string name="login_pw">密码</string>
    <string name="login_worktype">销售</string>
    <string name="login_net">连接设置</string>
    <string name="login_net_addr">服务器地址</string>
    <string name="query_key">查询关键字</string>
    <string name="please_input_query_key">请输入关键字</string>
    <string name="login_net_cancle">取消</string>
    <string name="login_net_save">保存</string>
    <string name="left_slide_username">我</string>
    <string name="left_slide_sync">同步数据</string>
    <string name="left_slide_check">检测升级</string>
    <string name="left_slide_quit">退出登录</string>
    <string name="main_daka">打卡</string>
    <string name="main_schedule">工作日程</string>
    <string name="main_contacts">联系人</string>
    <string name="schedule_title_txt">日程管理</string>
    <string name="schedule_menu_add">新增</string>
    <string name="schedule_menu_query">查詢</string>
    <string name="schedule_menu_sync">同步</string>
    <string name="add_schedule_title">新增计划</string>
    <string name="add_schedule_ok">确定</string>
    <string name="add_schedule_item_subject">主题</string>
    <string name="add_schedule_item_type">类型</string>
    <string name="add_schedule_item_partment">部门</string>
    <string name="add_schedule_item_owner">负责人</string>
    <string name="add_schedule_item_planstart">计划开始时间</string>
    <string name="add_schedule_item_planend">计划结束时间</string>
    <string name="add_schedule_item_start">开始时间</string>
    <string name="add_schedule_item_end">结束时间</string>
    <string name="add_schedule_item_contacts">联系人</string>
    <string name="add_schedule_item_customer">客户</string>
    <string name="add_schedule_item_before_notice">是否提前提醒</string>
    <string name="add_schedule_item_notice_time">提前提醒时间</string>
    <string name="add_schedule_item_state">状态</string>
    <string name="add_schedule_item_workplan">工作计划</string>
    <string name="add_schedule_item_nextstep">下一步计划</string>
    <string name="add_schedule_item_talk">谈话内容</string>
    <string name="add_schedule_item_purpose">目的</string>
    <string name="add_schedule_item_summary">总结</string>
    <string name="add_schedule_item_comment">备注</string>
    <string name="schedule_calendar_month">%1$s月   </string>
    <string name="schedule_calendar_year">  %1$s</string>
    <string name="schedule_calendar_mon">周一</string>
    <string name="schedule_calendar_tus">周二</string>
    <string name="schedule_calendar_wen">周三</string>
    <string name="schedule_calendar_thi">周四</string>
    <string name="schedule_calendar_fir">周五</string>
    <string name="schedule_calendar_sta">周六</string>
    <string name="schedule_calendar_sun">周日</string>
	<string name="search_hint">搜索</string>
	<string name="login_err">登录失败</string>
	<string name="net_err">网络错误，请求失败</string>
	<string name="login_success">登录成功</string>
	<string name="syncontact_success">同步数据成功</string>
	<string name="daka_success">打卡成功</string>
	<string name="upload_actplan_success">上传计划成功</string>
	<string name="upload_actplan_fail">上传计划失败</string>
	<string name="daka_fail">打卡失败</string>
	<string name="hasnewapp">有新版本，正在下载...</string>
	<string name="nonewapp">没有新版本</string>
	<string name="loading_asyn_msg">正在加载...</string>
	<string name="loading_asyn_checkapp">检测新版本...</string>
	<string name="punch_card_txt">打卡</string>
	<string name="tv_punch_record_now_time">2015/2/1 9:28</string>
	<string name="tv_punch_record_now_msg">打卡成功</string>
	<string name="punch_once_err">一分钟内不能重复打卡</string>
	<string name="add_schedule_item_before_notice_yes">是</string>
	<string name="add_schedule_item_before_notice_no">否</string>
	<string name="add_schedule_item_state_undo">未开始</string>
	<string name="add_schedule_item_state_doing">进行中</string>
	<string name="add_schedule_item_state_done">完成</string>
	<string name="add_schedule_item_state_waiting">等待</string>
	<string name="add_schedule_item_state_push">推迟</string>
	<string name="input_description">请输入信息并保存</string>
	<string name="msg_confirm">确定</string>
	<string name="share_notice_ok">确定</string>
	<string name="share_notice_cancle">取消</string>
	<string name="share_notice_title">是否放弃？</string>
	<string name="withoutPlan">计划外工作</string>
	<string name="mPlanStartTime">计划外工作</string>
</resources>
