<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_shape_box_net"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.mnker.crm.LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/query_key"
        android:textColor="@color/net_dialog_title"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_connect_http"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_shape_box_net_txt_bg"
        android:padding="8dp"
        android:hint="@string/please_input_query_key"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/net_dialog_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_net_cancle"
            android:textColor="@color/net_dialog_button"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/net_dialog_line" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/share_notice_ok"
            android:textColor="@color/net_dialog_button"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>