<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gonggong_bg"
    android:orientation="vertical"
    tools:context="com.mnker.crm.LoginActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@drawable/android_logo" />

    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shape_box_username"
            android:hint="@string/login_username"
            android:padding="8dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_shape_box_username"
            android:hint="@string/login_pw"
            android:padding="8dp"
            android:inputType="textPassword"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/et_worktype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_shape_box_username"
            android:padding="8dp"
            android:text="@string/login_worktype"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_connect_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="right|center_vertical"
            android:text="@string/login_net"
            android:textColor="@color/login_net"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_username"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/denglu_loginbutton" />

</RelativeLayout>