<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffebebeb"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/schedule_title_bg"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <ImageView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/wback_white" />

                    <TextView
                        android:id="@+id/tv_schedule_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
						android:layout_toRightOf="@id/iv_back"
						android:layout_centerVertical="true"
                        android:text="@string/schedule_title_txt"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/left_slid_user_txt"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/tv_msg_confirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/msg_confirm"
                        android:textSize="23sp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="220.0dip"
                    android:layout_marginBottom="5.0dip"
                    android:background="@drawable/scenepic_share_input_bg"
                    android:padding="0.0dip" >

                    <TextView
                        android:id="@+id/tv_input_count"
                        android:layout_width="fill_parent"
                        android:layout_height="25.0dip"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="8.0dip"
                        android:gravity="right|center"
                        android:paddingRight="20.0dip"
                        android:textColor="@color/common_black_80"
                        android:textSize="12.0dip" />

                    <EditText
                        android:id="@+id/et_input_info"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@null"
                        android:gravity="top|left|center"
                        android:hint="@string/input_description"
                        android:maxLength="40"
                        android:paddingLeft="17.0dip"
                        android:paddingRight="17.0dip"
                        android:paddingTop="25.0dip"
                        android:textColor="@color/common_black_80"
                        android:textColorHint="#2d000000"
                        android:textSize="16.0dip"
                        android:textStyle="normal" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>